--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,5 +32,4 @@ jobs:
       - name: Release
         env:
           GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
-          NPM_TOKEN: ${{ secrets.SEMANTIC_RELEASE_NPM_TOKEN }}
-        run: npx semantic-release@v17.1.1 --branches 'master'
+        run: npx semantic-release@v17.1.1 --branches 'master' -p ['@semantic-release/commit-analyzer', '@semantic-release/release-notes-generator', '@semantic-release/github']
