--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,28 +8,10 @@ on:
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
-      - name: Configure git for private modules
-        run: git config --global url."https://${USER}:${TOKEN}@github.com".insteadOf "https://github.com"
-
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@master
+      - name: Bump version and push tag
+        uses: mathieudutour/github-tag-action@v4.5
         with:
-          node-version: 12
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Release
-        env:
-          GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
-        run: npx semantic-release@v17.1.1 --branches 'master' -p ['@semantic-release/commit-analyzer', '@semantic-release/release-notes-generator', '@semantic-release/github']
+          github_token: ${{ secrets.GITHUB_TOKEN }}
